--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,23 @@
 {
-  "name": "english",
-  "homepage": "https://github.com/webdeveloper77/english",
-  "authors": [
-    "drinkcsis <webdevelop77@gmail.com>"
-  ],
-  "description": "",
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "_laravel5/public/assets/vendor",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "angular":"~1.5.*",
-    "angular-material":"*"
-  }
+    "name": "english",
+    "homepage": "https://github.com/webdeveloper77/english",
+    "authors": [
+        "drinkcsis <webdevelop77@gmail.com>"
+    ],
+    "description": "",
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "_laravel5/public/assets/vendor",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "angular": "~1.5.*",
+        "angular-material": "*",
+        "components-font-awesome": "*",
+        "angular-ui-router": "*"
+    }
 }
